# ar-reshaper

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: custom_config.rs  reshape_iterator.rs  reshape_line.rs  reshape_lines.rs
src/: config.rs  form.rs  iterator.rs  letters.rs  lib.rs  ligatures.rs  reshaper.rs
src/letters/: letters_db.rs  mod.rs
src/tests/: mod.rs  reshaping_02.rs  reshaping_03.rs
tests/: basic_reshaping.rs  reshaping_02.rs
