[package]
name = "ar-reshaper"
version = "1.3.1"
authors = ["Saeid Ghafari <saeid025@yahoo.com>"]
edition = "2021"
description = "Reconstruct Arabic sentences to be used in applications that don't support Arabic script."
repository = "https://github.com/YouKnow-sys/ar-reshaper"
documentation = "https://docs.rs/ar-reshaper"
license = "MIT"
keywords = ["arabic", "persian", "turkish", "reshape"]
categories = ["algorithms"]

[features]
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
ttf-parser = { version = "0.19", optional = true }

[[example]]
name = "reshape_line"
path = "examples/reshape_line.rs"

[[example]]
name = "reshape_lines"
path = "examples/reshape_lines.rs"

[[example]]
name = "reshape_iterator"
path = "examples/reshape_iterator.rs"

[[example]]
name = "custom_config"
path = "examples/custom_config.rs"
